--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,6 @@ server.port=9090
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=1144
 spring.jpa.show-sql=true
 server.error.include-stacktrace=ALWAYS
